Convert Relative imports to Path Alaises
- Notes: Noted an @ prefix on some file imports.
- Notes: RTMF'd the Next documentation and noted this is prompt 8 in create-next-app@latest Auto Installation.
- Notes: Googled, ChatGPTed and more RTMF.
- Add: Implemented a baseURL pointing to project root directory in tsconfig.json
- Add: Implemented further path aliases to project directories that will be used throughout.
- Change: Went through all current project files converted relative paths to aliases.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,13 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/assets/*": ["app/assets/*"],
+      "@/components/*": ["app/components/*"],
+      "@/hooks/*": ["app/hooks/*"],
+      "@/styles/*": ["app/styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
